# WhatsApp-Chat-Exporter

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  LICENSE.django  README.md  docs.html  extract.py  extract_iphone.py  extract_iphone_media.py  filter.html  hhhhhhh  index.html  old_README.md  pyproject.toml  setup.py  whatsapp.html
.github/: docs.html  generate-website.js  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  compile-binary.yml  generate-website.yml  python-publish.yml
Whatsapp_Chat_Exporter/: __init__.py  __main__.py  android_crypt.py  android_handler.py  bplist.py  contacts_from_vcards_test.py  contacts_names_from_vcards.py  contacts_names_from_vcards_test.py  data_model.py  exported_handler.py  extract.py  extract_exported.py  extract_iphone.py  extract_iphone_media.py  extract_iphone_media_smb.py  extract_new.py  ios_handler.py  ios_media_handler.py  media_timestamp.py  utility.py  vcards_contacts.py  vcards_contacts_test.py  whatsapp.html  whatsapp_new.html
scripts/: brazilian_number_processing.py  brazilian_number_processing_test.py  bruteforce_crypt15.py
tests/: conftest.py  test_brazilian_number_processing.py  test_exporter.py  test_incremental_merge.py  test_nuitka_binary.py  test_utility.py  test_vcards_contacts.py
tests/data/: contacts.vcf
